--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,8 @@
+# netlify.toml
 [build]
   command = "npm run build"
   publish = "dist"
 
 [build.environment]
-  NODE_VERSION = "18"
+  NODE_VERSION = "20.19.0"
+
