--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,12 @@
-# netlify.toml
 [build]
-  command = "npm run build"
   publish = "dist"
+  command = "npm run build"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
 
 [build.environment]
-  NODE_VERSION = "20.19.0"
+  NODE_VERSION = "18"
 
