--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "webapp-react",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint ."
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "lucide-react": "^0.468.0",
+    "framer-motion": "^11.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -34,8 +36,5 @@
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
-  },
-  "engines": {
-    "node": ">=18 <22"
   }
 }
